# LOLHelper-WebUI

./: .gitignore  B  LICENSE  README.MD  app.py  config.py  constants.py  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py
core/lcu/: __init__.py  client.py  credentials.py  enrichment.py  game_flow.py  live_game.py  match_history.py  summoner.py
data/: augment_info.json  augment_names.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/pages/: HomePage.css  HomePage.jsx  LiveGamePage.jsx  MatchDetailPage.css  MatchDetailPage.jsx  TFTSummonerPage.jsx
frontend/src/services/: api.js  socket.js
routes/: __init__.py  api_routes.py  data_routes.py  page_routes.py  react_api_routes.py  react_routes.py
routes/processors/: __init__.py  lol_processor.py  tft_processor.py
services/: __init__.py  auto_accept.py  auto_analyze.py  auto_banpick.py  match_service.py  opgg_service.py
static/css/: custom.css  modern.css
static/data/: champion_map.json
static/js/: live_game_page.js  main.js  main.module.js
static/js/modules/: api.js  championSelector.js  socketHandler.js  ui.js
static/react/: index.html
static/react/assets/: index-CsltXUgV.css  index-DOhvQbBC.js
templates/: index.html  live_game.html  match_detail.html  summoner_detail.html  tft_summoner.html
utils/: __init__.py  game_data_formatter.py  logger.py  network_utils.py
websocket/: __init__.py  socket_events.py
