[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcu-ui"
version = "0.1.0"
description = "LCU-UI - lightweight server for League helper features"
readme = "RELEASE_README.txt"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "ByteFlowing1337" } ]

# 基本依赖
dependencies = [
    "pynput>=1.7.0",
    "numpy>=1.24.0",
    "mss>=9.0.0",
    "Flask>=3.0.0",
    "Flask-SocketIO>=5.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]



[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "dist", "runs"]